update script sql with articles
